@@ -5,6 +5,11 @@ IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/11/09
 =======
+	* Corrected the Fog of Wall check so that it lasts 2x when it is placed on
+	  TOP of a suiton/deluge, not when the caster is on top of them. [Skotlex]
+	* Updated status_check_skilluse so that when the caster has a disabling
+	  status change (stun/petrify/etc) it will block the skill in all cases
+	  EXCEPT on cast-end when the skill is ground-targetted. [Skotlex]
 	* Fixed Health Conversion skill formula bug. [Lupus]
 2006/11/08
 	* Fixed Desperado's hit-rate, now it behaves as it should. [Skotlex]
